# erp_python

./: .gitignore  Makefile  README.md  README_DEPLOY.md  config.env  config.py  debug_login.py  fix_session_issue.py  init_db.py  pyproject.toml  requirements.txt  test_remote_login.py  wsgi.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-proxmox.yml  deploy.yml  security-scan.yml
app/: __init__.py
app/models/: __init__.py  crm.py  finance.py  inventory.py  schedule.py  settings.py  user.py
app/routes/: auth.py  crm.py  finance.py  inventory.py  main.py  schedule.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/crm/: customer_detail.html  customers.html  edit_customer.html  index.html  new_customer.html  new_sale.html  reports.html  sale_detail.html  sales.html
app/templates/finance/: account_detail.html  accounts.html  edit_account.html  edit_transaction.html  index.html  invoices.html  new_account.html  new_invoice.html  new_transaction.html  reports.html  transaction_detail.html  transactions.html
app/templates/inventory/: categories.html  edit_category.html  edit_product.html  index.html  movements.html  new_category.html  new_movement.html  new_product.html  product_detail.html  products.html  reports.html
app/templates/main/: dashboard.html  profile.html  settings.html
app/templates/schedule/: appointment_detail.html  appointments.html  calendar.html  edit_appointment.html  edit_event.html  event_detail.html  events.html  index.html  new_appointment.html  new_event.html
docs/: README.md
docs/automation/: GITHUB_AUTOMATION.md
docs/installation/: DEPLOY.md  DEPLOY_AUTOMATICO.md  EXECUTAR.md  INSTALACAO.md  INSTALACAO_LIMPA.md  INSTALACAO_SERVIDOR.md  README_PROXMOX.md  deploy_proxmox.md
docs/templates/: TEMPLATES_COMPLETOS.md
docs/troubleshooting/: CORRECAO_ERRO_DASHBOARD.md  RESUMO_SESSAO_CRM.md
scripts/: README.md
scripts/deploy/: auto-update.sh  auto_update.sh  clean-install.sh  deploy.sh  deploy_manual.sh  fix_session_server.sh  install.sh  install_server.sh  manage.sh  protect_database.sh  setup_production.sh  ssl_setup.sh
scripts/migrations/: migrate_categories.py  migrate_email_unique.py  migrate_instagram.py
scripts/proxmox/: install_proxmox.sh  proxmox_upload.sh
scripts/tests/: test_api_customer.py  test_categorias_fix.py  test_customer_creation.py  test_dashboard.py  test_db.py  test_erros_crm.py  test_erros_inventory.py  test_insert_customer.py  test_profile_settings.py  test_simple.py  test_system.py  test_transacoes_fix.py  test_web_customer.py
tools/: README.md
tools/maintenance/: check_admin_user.py  check_indexes.py  remove_email_index.py
